# asterix_decoder

./: .gitattributes  .gitignore  BUILD_INSTRUCTIONS.md  README.md  asterix_dashboard.spec  asterix_decoder.sln  build_rust.sh  cat21.py  cat48_simple.csv  dashboard.py  debug_bp.py  debug_bp_actual.py  debug_categories.py  debug_counts.py  debug_mode3a.py  debug_mode3a_real.py  debug_mode3a_simple.py  debug_python.py  decoder.py  decoderrs.pyi  filter_cat21.py  main.py  mapdata.py  pyproject.toml  scratch.ipynb  test.ipynb  test.py  test_bp_formula.py  test_bp_search.py  test_dashboard.py  test_interpolation.py  test_mode3a_real.py  test_mode3a_simple.py  test_rust_direct.py  test_rust_mode3a.py  test_single.py  test_specific_bytes.py  test_structure.py
.github/workflows/: README.md  build-and-release.yml
PGTA Source/: PGTA_deco048.MainWindow.xaml  PGTA_deco048.Properties.Resources.resx  PGTA_deco048.csproj
PGTA Source/PGTA_deco048/: App.cs  Cat_021.cs  Cat_048.cs  Cat_ASTERIX.cs  Coordinates.cs  CoordinatesPolar.cs  CoordinatesUVH.cs  CoordinatesWGS84.cs  CoordinatesXYH.cs  CoordinatesXYZ.cs  GeneralMatrix.cs  GeoUtils.cs  Lectura.cs  MainWindow.cs  Maths.cs
PGTA Source/PGTA_deco048.Properties/: Resources.cs  Settings.cs
PGTA Source/Properties/: AssemblyInfo.cs
Test_Data/: datos_asterix_adsb.ast  datos_asterix_combinado.ast  datos_asterix_radar.ast
decoder/: Altitude_Conversor.py  __init__.py  __main__.py  cat21.py  cat48.py  decoder.py  geoutils.py
decoder/geoutils/: __init__.py  coordinates.py  core.py  maths.py  matrix.py
decoderrs/: Cargo.toml
decoderrs/src/: cat21.rs  cat48.rs  geoutils.rs  lib.rs  main.rs
doc/: plantilla_eval.md
