[project]
name = "asterix-decoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bitstring>=4.3.1",
    "black>=25.9.0",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "rich>=14.1.0",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]
