[project]
name = "asterix-decoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bitstring>=4.3.1",
    "black>=25.9.0",
    "contextily>=1.6.2",
    "dearpygui>=2.1.0",
    "ffmpeg-python>=0.2.0",
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "ipykernel>=7.0.0",
    "ipython>=8.37.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "pyinstaller>=6.16.0",
    "rich>=14.1.0",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]
