[package]
name = "decoderrs"
version = "0.2.1"
edition = "2021"

[lib]
name = "decoderrs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.6", features = ["extension-module"] }
nalgebra = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitvec = "1.0"

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = true